syntax = "proto3";

package drift.proto.common;

import "drift_protocol/common/status_code.proto";

// A binary data are sent between services
message DataPayload {
  repeated uint32 shape = 1; // shape of the data (if compressed the shape of the origin data)
  bytes data = 2; // blob of data
}
